[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "asfsmd"
authors = [
    {name = "Antonio Valentino", email = "antonio.valentino@tiscali.it"},
]
description = "ASF Sentinel-1 Metadata Download tool"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.7"
keywords = ["satellite", "download"]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "fsspec",
    "aiohttp",
    "asf-search",
    "asf-search < 6; python_version<'3.8'",
    "tqdm",
]
dynamic = ["version"]


[project.optional-dependencies]
cli = ["argcomplete"]
httpio = ["httpio", "requests"]
remotezip = ["remotezip"]
smartopen = ["smart_open"]
all = [
    "asfsmd[cli]",
    "asfsmd[httpio]",
    "asfsmd[remotezip]",
    "asfsmd[smartopen]",
]


[project.scripts]
asfsmd = "asfsmd.cli:main"


[project.urls]
Homepage = "https://github.com/avalentino/asfsmd"
Documentation = "https://github.com/avalentino/asfsmd/blob/main/README.rst"
Repository = "https://github.com/avalentino/asfsmd.git"
Changelog = "https://github.com/avalentino/asfsmd/blob/main/CHANGELOG.rst"


[tool.setuptools]
packages = ["asfsmd"]
zip-safe = true
# license-files = ["LICENSE"]


[tool.setuptools.dynamic]
version = {attr = "asfsmd.__version__"}


[tool.black]
line-length = 79
# target-version = ['py311']


[tool.isort]
profile = "black"
length_sort = true
no_inline_sort = true
include_trailing_comma = true
use_parentheses = true
line_length = 79
