[metadata]
name = asfsmd
version = attr: asfsmd.__version__
description = ASF Sentinel-1 Metadata Download tool
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
keywords = satellite, download
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = True
py_modules = asfsmd
install_requires =
    requests
    httpio
    asf-search
    tqdm
python_requires = >=3.6

[options.entry_points]
console_scripts =
    asfsmd = asfsmd:main

[options.extras_require]
cli =
    argcomplete
