[metadata]
name = asfsmd
version = attr: asfsmd.__version__
description = ASF Sentinel-1 Metadata Download tool
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
author = Antonio Valentino
keywords = satellite, download
license = MIT License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
platforms = any
project_urls =
    Documentation = https://github.com/avalentino/asfsmd/blob/main/README.rst
    Source = https://github.com/avalentino/asfsmd
    Tracker = https://github.com/avalentino/asfsmd/issues
    Download = https://pypi.org/project/asfsmd

[options]
zip_safe = True
packages = find:
install_requires =
    fsspec
    asf-search
    tqdm
python_requires = >=3.6

[options.entry_points]
console_scripts =
    asfsmd = asfsmd.cli:main

[options.extras_require]
cli =
    argcomplete
httpio =
    httpio
    requests
remotezip =
    remotezip
smartopen =
    smart_open
all =
    asfsmd[cli]
    asfsmd[httpio]
    asfsmd[remotezip]
    asfsmd[smartopen]
